// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - sql - entities gateway-jwt-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-oracle-enableHibernateCache(true)-h2Disk-hazelcast should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomId.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomIdCallback.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/rowmapper/EntityWithCustomIdRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/AnotherSimple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Simple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/AnotherSimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/SimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/dto/AnotherSimpleRest.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/domain/EntityWithCustomIdTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/AnotherSimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/SimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/dto/AnotherSimpleRestTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities gateway-oauth2-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-cucumber-enableSwaggerCodegen:true-websocket(true)-consul-postgresql-enableHibernateCache(false)-h2Disk-infinispan should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/domain/EntityWithCustomIdEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/domain/EntityWithCustomIdEntityCallback.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/EntityWithCustomIdRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/EntityWithCustomIdSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/rowmapper/EntityWithCustomIdRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/AnotherSimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/SimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/AnotherSimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/AnotherSimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/SimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/SimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/rowmapper/AnotherSimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/rowmapper/SimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/dto/AnotherSimpleDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/domain/EntityWithCustomIdEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/AnotherSimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/SimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/dto/AnotherSimpleDTOTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities microservice-jwt-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-cucumber-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-mysql-enableHibernateCache(false)-mysql-caffeine should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/domain/EntityWithCustomIdEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/AnotherSimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/MicroserviceEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/SimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/SimpleQueryService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/dto/AnotherSimpleDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/domain/EntityWithCustomIdEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/AnotherSimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/MicroserviceEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/SimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/dto/AnotherSimpleDTOTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities microservice-jwt-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-enableSwaggerCodegen:true-skipUserManagement(true)-eureka-mysql-enableHibernateCache(true)-h2Memory should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomId.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomIdCallback.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/rowmapper/EntityWithCustomIdRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/AnotherSimple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Microservice.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Simple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/AnotherSimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/MicroserviceRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/SimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/dto/AnotherSimpleRest.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/domain/EntityWithCustomIdTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/AnotherSimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/MicroserviceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/SimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/dto/AnotherSimpleRestTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities microservice-oauth2-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-gatling-enableSwaggerCodegen:true-websocket(true)-eureka-mariadb-enableHibernateCache(true)-h2Memory-memcached should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/domain/EntityWithCustomIdEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/AnotherSimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/MicroserviceEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/SimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/SimpleQueryService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/dto/AnotherSimpleDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/AnotherSimpleGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/EntityWithCustomIdGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/MicroserviceGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/SimpleGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/domain/EntityWithCustomIdEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/AnotherSimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/MicroserviceEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/SimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/dto/AnotherSimpleDTOTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities microservice-oauth2-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-gatling-consul-mssql-enableHibernateCache(false)-h2Memory should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomId.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomIdCallback.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/rowmapper/EntityWithCustomIdRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/AnotherSimple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Microservice.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Simple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/AnotherSimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/MicroserviceRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/SimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/dto/AnotherSimpleRest.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/domain/EntityWithCustomIdTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/AnotherSimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/MicroserviceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/SimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/dto/AnotherSimpleRestTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/AnotherSimpleGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/EntityWithCustomIdGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/MicroserviceGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/SimpleGatlingTest.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities monolith-jwt-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-enableSwaggerCodegen:true-websocket(true)-skipUserManagement(false)-consul-postgresql-enableHibernateCache(true)-h2Memory-redis should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/domain/EntityWithCustomIdEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/AnotherSimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/MicroserviceEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/SimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/SimpleQueryService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/dto/AnotherSimpleDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/domain/EntityWithCustomIdEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/AnotherSimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/MicroserviceEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/SimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/dto/AnotherSimpleDTOTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities monolith-jwt-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-cucumber-skipUserManagement(true)-serviceDiscoveryType(no)-oracle-enableHibernateCache(false)-h2Memory should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomId.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomIdCallback.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/rowmapper/EntityWithCustomIdRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/AnotherSimple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Microservice.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Simple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/AnotherSimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/MicroserviceRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/SimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/dto/AnotherSimpleRest.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/domain/EntityWithCustomIdTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/AnotherSimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/MicroserviceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/SimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/dto/AnotherSimpleRestTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities monolith-oauth2-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-websocket(false)-serviceDiscoveryType(no)-postgresql-enableHibernateCache(false)-postgresql-cacheProvider(no) should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/domain/EntityWithCustomIdEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/AnotherSimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/MicroserviceEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/SimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/SimpleQueryService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/dto/AnotherSimpleDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/domain/EntityWithCustomIdEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/AnotherSimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/MicroserviceEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/SimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/dto/AnotherSimpleDTOTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities monolith-oauth2-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-cucumber-enableSwaggerCodegen:true-eureka-oracle-enableHibernateCache(true)-oracle should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomId.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomIdCallback.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/rowmapper/EntityWithCustomIdRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/AnotherSimple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Microservice.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Simple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/AnotherSimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/MicroserviceRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/SimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/dto/AnotherSimpleRest.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/domain/EntityWithCustomIdTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/AnotherSimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/MicroserviceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/SimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/dto/AnotherSimpleRestTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities monolith-session-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-gatling-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-mariadb-enableHibernateCache(false)-mariadb-ehcache should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/domain/EntityWithCustomIdEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/AnotherSimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/MicroserviceEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/domain/SimpleEntity.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/SimpleQueryService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/dto/AnotherSimpleDTO.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/tech/jhipster/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/AnotherSimpleGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/EntityWithCustomIdGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/MicroserviceGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/SimpleGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/domain/EntityWithCustomIdEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/AnotherSimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/MicroserviceEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/domain/SimpleEntityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/dto/AnotherSimpleDTOTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/tech/jhipster/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities monolith-session-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-gatling-enableSwaggerCodegen:true-skipUserManagement(true)-consul-mssql-enableHibernateCache(true)-mssql should match generated files snapshot 1`] = `
{
  ".jhipster/AnotherSimple.json": {
    "stateCleared": "modified",
  },
  ".jhipster/EntityWithCustomId.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Microservice.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Simple.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomId.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/domain/EntityWithCustomIdCallback.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/EntityWithCustomIdSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/repository/rowmapper/EntityWithCustomIdRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/custom/web/rest/EntityWithCustomIdResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/AnotherSimple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Microservice.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/Simple.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/domain/criteria/SimpleCriteria.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/AnotherSimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/MicroserviceSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleRepositoryInternalImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/SimpleSqlHelper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/AnotherSimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/MicroserviceRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/repository/rowmapper/SimpleRowMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/AnotherSimpleService.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/dto/AnotherSimpleRest.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/impl/AnotherSimpleServiceImpl.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/AnotherSimpleMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/service/mapper/EntityMapper.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/AnotherSimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/MicroserviceResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/package/web/rest/SimpleResource.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/domain/EntityWithCustomIdTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/custom/web/rest/EntityWithCustomIdResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/AnotherSimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/MicroserviceTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/domain/SimpleTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/dto/AnotherSimpleRestTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/service/mapper/AnotherSimpleMapperTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/AnotherSimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/MicroserviceResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/package/web/rest/SimpleResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/AnotherSimpleGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/EntityWithCustomIdGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/MicroserviceGatlingTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/gatling/simulations/SimpleGatlingTest.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - sql - entities samples matrix should match snapshot 1`] = `
{
  "gateway-jwt-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-oracle-enableHibernateCache(true)-h2Disk-hazelcast": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "gateway",
        "authenticationType": "jwt",
        "baseName": "jhipster",
        "buildTool": "gradle",
        "cacheProvider": "hazelcast",
        "databaseType": "sql",
        "devDatabaseType": "h2Disk",
        "dtoSuffix": "Rest",
        "enableHibernateCache": true,
        "enableTranslation": true,
        "entitySuffix": "",
        "jhiPrefix": "fix",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "com.package",
        "prodDatabaseType": "oracle",
        "serverSideOptions": [],
        "serviceDiscoveryType": "no",
        "skipCommitHook": true,
        "skipUserManagement": false,
        "testFrameworks": [],
        "websocket": false,
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "gateway-oauth2-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-cucumber-enableSwaggerCodegen:true-websocket(true)-consul-postgresql-enableHibernateCache(false)-h2Disk-infinispan": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "gateway",
        "authenticationType": "oauth2",
        "baseName": "jhipster",
        "buildTool": "maven",
        "cacheProvider": "infinispan",
        "databaseType": "sql",
        "devDatabaseType": "h2Disk",
        "dtoSuffix": "DTO",
        "enableHibernateCache": false,
        "enableTranslation": false,
        "entitySuffix": "Entity",
        "jhiPrefix": "jhi",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "tech.jhipster",
        "prodDatabaseType": "postgresql",
        "serverSideOptions": [
          "enableSwaggerCodegen:true",
        ],
        "serviceDiscoveryType": "consul",
        "skipCommitHook": false,
        "testFrameworks": [
          "cucumber",
        ],
        "websocket": true,
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "microservice-jwt-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-cucumber-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-mysql-enableHibernateCache(false)-mysql-caffeine": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "microservice",
        "authenticationType": "jwt",
        "baseName": "jhipster",
        "buildTool": "maven",
        "cacheProvider": "caffeine",
        "databaseType": "sql",
        "devDatabaseType": "mysql",
        "dtoSuffix": "DTO",
        "enableHibernateCache": false,
        "enableTranslation": false,
        "entitySuffix": "Entity",
        "jhiPrefix": "jhi",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "tech.jhipster",
        "prodDatabaseType": "mysql",
        "reactive": false,
        "serverSideOptions": [],
        "serviceDiscoveryType": "no",
        "skipCommitHook": false,
        "skipUserManagement": false,
        "testFrameworks": [
          "cucumber",
        ],
        "websocket": false,
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "microservice-jwt-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-enableSwaggerCodegen:true-skipUserManagement(true)-eureka-mysql-enableHibernateCache(true)-h2Memory": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "microservice",
        "authenticationType": "jwt",
        "baseName": "jhipster",
        "buildTool": "gradle",
        "databaseType": "sql",
        "devDatabaseType": "h2Memory",
        "dtoSuffix": "Rest",
        "enableHibernateCache": true,
        "enableTranslation": true,
        "entitySuffix": "",
        "jhiPrefix": "fix",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "com.package",
        "prodDatabaseType": "mysql",
        "reactive": true,
        "serverSideOptions": [
          "enableSwaggerCodegen:true",
        ],
        "serviceDiscoveryType": "eureka",
        "skipCommitHook": true,
        "skipUserManagement": true,
        "testFrameworks": [],
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "microservice-oauth2-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-gatling-enableSwaggerCodegen:true-websocket(true)-eureka-mariadb-enableHibernateCache(true)-h2Memory-memcached": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "microservice",
        "authenticationType": "oauth2",
        "baseName": "jhipster",
        "buildTool": "maven",
        "cacheProvider": "memcached",
        "databaseType": "sql",
        "devDatabaseType": "h2Memory",
        "dtoSuffix": "DTO",
        "enableHibernateCache": true,
        "enableTranslation": false,
        "entitySuffix": "Entity",
        "jhiPrefix": "jhi",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "tech.jhipster",
        "prodDatabaseType": "mariadb",
        "reactive": false,
        "serverSideOptions": [
          "enableSwaggerCodegen:true",
        ],
        "serviceDiscoveryType": "eureka",
        "skipCommitHook": false,
        "testFrameworks": [
          "gatling",
        ],
        "websocket": true,
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "microservice-oauth2-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-gatling-consul-mssql-enableHibernateCache(false)-h2Memory": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "microservice",
        "authenticationType": "oauth2",
        "baseName": "jhipster",
        "buildTool": "gradle",
        "databaseType": "sql",
        "devDatabaseType": "h2Memory",
        "dtoSuffix": "Rest",
        "enableHibernateCache": false,
        "enableTranslation": true,
        "entitySuffix": "",
        "jhiPrefix": "fix",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "com.package",
        "prodDatabaseType": "mssql",
        "reactive": true,
        "serverSideOptions": [],
        "serviceDiscoveryType": "consul",
        "skipCommitHook": true,
        "testFrameworks": [
          "gatling",
        ],
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "monolith-jwt-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-enableSwaggerCodegen:true-websocket(true)-skipUserManagement(false)-consul-postgresql-enableHibernateCache(true)-h2Memory-redis": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "monolith",
        "authenticationType": "jwt",
        "baseName": "jhipster",
        "buildTool": "maven",
        "cacheProvider": "redis",
        "databaseType": "sql",
        "devDatabaseType": "h2Memory",
        "dtoSuffix": "DTO",
        "enableHibernateCache": true,
        "enableTranslation": false,
        "entitySuffix": "Entity",
        "jhiPrefix": "jhi",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "tech.jhipster",
        "prodDatabaseType": "postgresql",
        "reactive": false,
        "serverSideOptions": [
          "enableSwaggerCodegen:true",
        ],
        "serviceDiscoveryType": "consul",
        "skipCommitHook": false,
        "skipUserManagement": false,
        "testFrameworks": [],
        "websocket": true,
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "monolith-jwt-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-cucumber-skipUserManagement(true)-serviceDiscoveryType(no)-oracle-enableHibernateCache(false)-h2Memory": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "monolith",
        "authenticationType": "jwt",
        "baseName": "jhipster",
        "buildTool": "gradle",
        "databaseType": "sql",
        "devDatabaseType": "h2Memory",
        "dtoSuffix": "Rest",
        "enableHibernateCache": false,
        "enableTranslation": true,
        "entitySuffix": "",
        "jhiPrefix": "fix",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "com.package",
        "prodDatabaseType": "oracle",
        "reactive": true,
        "serverSideOptions": [],
        "serviceDiscoveryType": "no",
        "skipCommitHook": true,
        "skipUserManagement": true,
        "testFrameworks": [
          "cucumber",
        ],
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "monolith-oauth2-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-websocket(false)-serviceDiscoveryType(no)-postgresql-enableHibernateCache(false)-postgresql-cacheProvider(no)": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "monolith",
        "authenticationType": "oauth2",
        "baseName": "jhipster",
        "buildTool": "maven",
        "cacheProvider": "no",
        "databaseType": "sql",
        "devDatabaseType": "postgresql",
        "dtoSuffix": "DTO",
        "enableHibernateCache": false,
        "enableTranslation": false,
        "entitySuffix": "Entity",
        "jhiPrefix": "jhi",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "tech.jhipster",
        "prodDatabaseType": "postgresql",
        "reactive": false,
        "serverSideOptions": [],
        "serviceDiscoveryType": "no",
        "skipCommitHook": false,
        "testFrameworks": [],
        "websocket": false,
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "monolith-oauth2-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-cucumber-enableSwaggerCodegen:true-eureka-oracle-enableHibernateCache(true)-oracle": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "monolith",
        "authenticationType": "oauth2",
        "baseName": "jhipster",
        "buildTool": "gradle",
        "databaseType": "sql",
        "devDatabaseType": "oracle",
        "dtoSuffix": "Rest",
        "enableHibernateCache": true,
        "enableTranslation": true,
        "entitySuffix": "",
        "jhiPrefix": "fix",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "com.package",
        "prodDatabaseType": "oracle",
        "reactive": true,
        "serverSideOptions": [
          "enableSwaggerCodegen:true",
        ],
        "serviceDiscoveryType": "eureka",
        "skipCommitHook": true,
        "testFrameworks": [
          "cucumber",
        ],
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "monolith-session-reactive(false)-maven-enableTranslation(false)-tech.jhipster-jhi-Entity-DTO-skipCommitHook(false)-gatling-websocket(false)-skipUserManagement(false)-serviceDiscoveryType(no)-mariadb-enableHibernateCache(false)-mariadb-ehcache": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "monolith",
        "authenticationType": "session",
        "baseName": "jhipster",
        "buildTool": "maven",
        "cacheProvider": "ehcache",
        "databaseType": "sql",
        "devDatabaseType": "mariadb",
        "dtoSuffix": "DTO",
        "enableHibernateCache": false,
        "enableTranslation": false,
        "entitySuffix": "Entity",
        "jhiPrefix": "jhi",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "tech.jhipster",
        "prodDatabaseType": "mariadb",
        "reactive": false,
        "serverSideOptions": [],
        "serviceDiscoveryType": "no",
        "skipCommitHook": false,
        "skipUserManagement": false,
        "testFrameworks": [
          "gatling",
        ],
        "websocket": false,
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
  "monolith-session-reactive(true)-gradle-enableTranslation(true)-com.package-fix--Rest-skipCommitHook(true)-gatling-enableSwaggerCodegen:true-skipUserManagement(true)-consul-mssql-enableHibernateCache(true)-mssql": {
    "applicationWithEntities": {
      "config": {
        "applicationType": "monolith",
        "authenticationType": "session",
        "baseName": "jhipster",
        "buildTool": "gradle",
        "databaseType": "sql",
        "devDatabaseType": "mssql",
        "dtoSuffix": "Rest",
        "enableHibernateCache": true,
        "enableTranslation": true,
        "entitySuffix": "",
        "jhiPrefix": "fix",
        "languages": [
          "fr",
          "en",
        ],
        "nativeLanguage": "en",
        "packageName": "com.package",
        "prodDatabaseType": "mssql",
        "reactive": true,
        "serverSideOptions": [
          "enableSwaggerCodegen:true",
        ],
        "serviceDiscoveryType": "consul",
        "skipCommitHook": true,
        "skipUserManagement": true,
        "testFrameworks": [
          "gatling",
        ],
      },
      "entities": [
        {
          "changelogDate": "20220129000100",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "jpaMetamodelFiltering": true,
          "name": "Simple",
        },
        {
          "changelogDate": "20220129000200",
          "clientRootFolder": "test-root",
          "dto": "mapstruct",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "name": "AnotherSimple",
          "pagination": "pagination",
          "service": "serviceImpl",
        },
        {
          "changelogDate": "20220129002000",
          "entityPackage": "custom",
          "fields": [
            {
              "fieldName": "id",
              "fieldType": "UUID",
            },
          ],
          "name": "EntityWithCustomId",
        },
        {
          "changelogDate": "20220129000300",
          "fields": [
            {
              "fieldName": "simpleName",
              "fieldType": "String",
            },
          ],
          "microserviceName": "microservice1",
          "name": "Microservice",
          "pagination": "infiniscroll",
          "service": "service",
          "skipFakeData": true,
        },
      ],
    },
    "defaults": true,
    "skipPriorities": [
      "writing",
      "postWriting",
    ],
  },
}
`;
